nicknamer/server/lib/tests/snapshots/names_endpoints_tests__can_create_name_successfully.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: create_name_successfully
status: 200
headers:
  content-type: text/html; charset=utf-8
html_body:
  - ""
  - "<div class=\"overflow-x-auto\">"
  - "  <table class=\"table table-zebra w-full table-fixed\">"
  - "    <thead>"
  - "      <tr>"
  - "        <th class=\"w-32\">Discord ID</th>"
  - "        <th class=\"w-32\">Server ID</th>"
  - "        <th class=\"w-48\">Name</th>"
  - "        <th class=\"w-40\"></th>"
  - "      </tr>"
  - "    </thead>"
  - "    <tbody>"
  - "       <tr id=\"name-row-1\">"
  - "  <td>555666777</td>"
  - "  <td>test-server-1</td>"
  - "  <td class=\"font-semibold\">NewTestUser</td>"
  - "  <th>"
  - "    <button"
  - "      class=\"btn btn-warning btn-sm mr-2\""
  - "      hx-get=\"/names/1/edit\""
  - "      hx-target=\"closest tr\""
  - "      hx-swap=\"outerHTML\""
  - "    >"
  - "      <svg"
  - "        xmlns=\"http://www.w3.org/2000/svg\""
  - "        class=\"h-4 w-4\""
  - "        fill=\"none\""
  - "        viewBox=\"0 0 24 24\""
  - "        stroke=\"currentColor\""
  - "      >"
  - "        <path"
  - "          stroke-linecap=\"round\""
  - "          stroke-linejoin=\"round\""
  - "          stroke-width=\"2\""
  - "          d=\"M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z\""
  - "        />"
  - "      </svg>"
  - "      Edit"
  - "    </button>"
  - "    <button"
  - "      class=\"btn btn-error btn-sm\""
  - "      hx-delete=\"/names/1\""
  - "      hx-target=\"#names-table\""
  - "      hx-confirm=\"Are you sure you want to delete this name entry?\""
  - "    >"
  - "      <svg"
  - "        xmlns=\"http://www.w3.org/2000/svg\""
  - "        class=\"h-4 w-4\""
  - "        fill=\"none\""
  - "        viewBox=\"0 0 24 24\""
  - "        stroke=\"currentColor\""
  - "      >"
  - "        <path"
  - "          stroke-linecap=\"round\""
  - "          stroke-linejoin=\"round\""
  - "          stroke-width=\"2\""
  - "          d=\"M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16\""
  - "        />"
  - "      </svg>"
  - "      Delete"
  - "    </button>"
  - "  </th>"
  - "</tr> "
  - "    </tbody>"
  - "  </table>"
  - "</div>"
  - ""
  - ""
  - ""
  - "<div class=\"stats stats-horizontal shadow mt-6\">"
  - "  <div class=\"stat\">"
  - "    <div class=\"stat-title\">Total Names</div>"
  - "    <div class=\"stat-value\">1</div>"
  - "    <div class=\"stat-desc\">Names in database</div>"
  - "  </div>"
  - "</div>"
