nicknamer/server/lib/tests/snapshots/names_endpoints_tests__can_handle_bulk_add_with_some_duplicate_entries.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: bulk_add_success_with_duplicates
status: 200
headers:
  content-type: text/html; charset=utf-8
html_body:
  - "<div class=\"alert alert-success mb-4\">"
  - "  <svg"
  - "    xmlns=\"http://www.w3.org/2000/svg\""
  - "    class=\"stroke-current shrink-0 h-6 w-6\""
  - "    fill=\"none\""
  - "    viewBox=\"0 0 24 24\""
  - "  >"
  - "    <path"
  - "      stroke-linecap=\"round\""
  - "      stroke-linejoin=\"round\""
  - "      stroke-width=\"2\""
  - "      d=\"M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z\""
  - "    />"
  - "  </svg>"
  - "  <div>"
  - "    <h3 class=\"font-bold\">Bulk upload completed!</h3>"
  - "    <div class=\"text-sm\">"
  - "      <p>✅ Created: 2 new entries</p>"
  - "      "
  - "      <p>⏭️ Skipped: 1 existing entries</p>"
  - "       "
  - "    </div>"
  - "  </div>"
  - "</div>"
  - ""
  - "<!-- Processed data display -->"
  - "<div class=\"space-y-4\">"
  - "  <div class=\"space-y-2\">"
  - "    <h4 class=\"font-semibold text-base\">Server ID (Processed)</h4>"
  - "    <div"
  - "      class=\"p-3 border border-base-300 rounded bg-base-200 text-base-content\""
  - "    >"
  - "      test-server-1"
  - "    </div>"
  - "  </div>"
  - ""
  - "  <div class=\"space-y-2\">"
  - "    <h4 class=\"font-semibold text-base\">YAML Content (Processed)</h4>"
  - "    <div"
  - "      class=\"p-3 border border-base-300 rounded w-full h-48 bg-base-200 text-base-content whitespace-pre-wrap overflow-auto\""
  - "    >"
  - "      123456789: TestUser1"
  - "555666777: NewUser1"
  - "888999000: NewUser2"
  - "    </div>"
  - "    <p class=\"text-sm text-success\">"
  - "      ✅ This YAML content has been successfully processed"
  - "    </p>"
  - "  </div>"
  - "</div>"
  - ""
  - "<div class=\"flex gap-2\">"
  - "  <a href=\"/names\" class=\"btn btn-primary\">"
  - "    <svg"
  - "      xmlns=\"http://www.w3.org/2000/svg\""
  - "      class=\"h-5 w-5 mr-2\""
  - "      fill=\"none\""
  - "      viewBox=\"0 0 24 24\""
  - "      stroke=\"currentColor\""
  - "    >"
  - "      <path"
  - "        stroke-linecap=\"round\""
  - "        stroke-linejoin=\"round\""
  - "        stroke-width=\"2\""
  - "        d=\"M4 6h16M4 10h16M4 14h16M4 18h16\""
  - "      />"
  - "    </svg>"
  - "    View All Names"
  - "  </a>"
  - "  <a href=\"/names/bulk-add\" class=\"btn btn-secondary\">"
  - "    <svg"
  - "      xmlns=\"http://www.w3.org/2000/svg\""
  - "      class=\"h-5 w-5 mr-2\""
  - "      fill=\"none\""
  - "      viewBox=\"0 0 24 24\""
  - "      stroke=\"currentColor\""
  - "    >"
  - "      <path"
  - "        stroke-linecap=\"round\""
  - "        stroke-linejoin=\"round\""
  - "        stroke-width=\"2\""
  - "        d=\"M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10\""
  - "      />"
  - "    </svg>"
  - "    Upload Another File"
  - "  </a>"
  - "</div>"
